<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:ads="http://schemas.android.com/apk/res-auto"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/main_xxhdpi">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.hotpot.urspeed.android.activity.MainActivity">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/banner_ad_unit_id">
        </com.google.android.gms.ads.AdView>

        <LinearLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:layout_marginBottom="@dimen/global_margin"
            android:layout_marginLeft="@dimen/global_margin"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:background="@drawable/button_state">
                <Spinner
                    android:id="@+id/profile_spinner"
                    android:layout_width="@dimen/spinner_width"
                    android:layout_height="@dimen/spinner_size"
                    android:gravity="center_vertical"
                    android:popupBackground="@drawable/button_state"
                    android:spinnerMode="dropdown"
                    android:textAlignment="center"
                    android:textSize="30sp"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageButton
                    android:id="@+id/create_profile"
                    android:layout_width="@dimen/spinner_size"
                    android:layout_height="@dimen/spinner_size"
                    android:layout_marginRight="4dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/button_state"
                    android:src="@mipmap/action_add"/>

                <ImageButton
                    android:id="@+id/edit_profile"
                    android:layout_width="@dimen/spinner_size"
                    android:layout_height="@dimen/spinner_size"
                    android:layout_marginLeft="4dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/button_state"
                    android:src="@mipmap/action_edit"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/global_margin"
            android:layout_marginLeft="@dimen/global_margin"
            android:orientation="horizontal">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:background="@drawable/button_state">
                <Spinner
                    android:id="@+id/speed_spinner"
                    android:layout_width="@dimen/speed_spinner_width"
                    android:layout_height="@dimen/spinner_size"
                    android:popupBackground="@drawable/button_state"
                    android:spinnerMode="dropdown"
                    android:textAlignment="center"
                    android:textSize="30sp"/>
            </RelativeLayout>

            <ImageButton
                android:id="@+id/unit_button"
                android:layout_width="@dimen/spinner_size"
                android:layout_height="@dimen/spinner_size"
                android:layout_marginLeft="4dp"
                android:background="@drawable/button_state"
                android:src="@mipmap/kmhmph_small"/>
        </LinearLayout>

        <EditText
            android:id="@+id/editTextGPSTol"
            android:layout_width="183dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/change_image_button"
            android:layout_gravity="center_horizontal"
            android:hint="start tolerance"
            android:inputType="textCapSentences"
            android:singleLine="true"
            android:text="@string/gps_tolerance"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/editTextAccelTol"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/change_image_button"
            android:layout_gravity="center_horizontal"
            android:hint="accel tolerance"
            android:inputType="textCapSentences"
            android:singleLine="true"
            android:text="@string/acceleration_threshold"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/start"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spinner_size"
                android:layout_marginLeft="@dimen/global_margin"
                android:layout_marginRight="@dimen/global_margin_extra_small"
                android:layout_weight="0.5"
                android:background="@drawable/button_state"
                android:text="@string/activity_main_start_button"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/result"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spinner_size"
                android:layout_marginLeft="@dimen/global_margin_extra_small"
                android:layout_marginRight="@dimen/global_margin"
                android:layout_weight="0.5"
                android:background="@drawable/button_state"
                android:text="@string/activity_main_result_button"
                android:textAllCaps="false"/>
        </LinearLayout>

        <Button
            android:id="@+id/mock"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/spinner_size"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/global_margin"
            android:background="@drawable/button_state"
            android:text="mock data"
            android:visibility="gone"/>

    </LinearLayout>
</ScrollView>
